[gd_scene load_steps=10 format=2]

[ext_resource path="res://ImpostorShader.shader" type="Shader" id=1]
[ext_resource path="res://result.png" type="Texture" id=2]
[ext_resource path="res://assets/tree_v2/tree_v2.tscn" type="PackedScene" id=3]
[ext_resource path="res://CameraOctahedral.gd" type="Script" id=4]
[ext_resource path="res://env_test.tres" type="Environment" id=5]
[ext_resource path="res://MainViewCamera.gd" type="Script" id=6]
[ext_resource path="res://result_normal.png" type="Texture" id=7]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/imposterFrames = Vector2( 16, 16 )
shader_param/positionOffset = Vector3( 0, -0.023, 0 )
shader_param/isFullSphere = false
shader_param/alpha_clamp = 0.573
shader_param/scale = 0.575
shader_param/imposterBaseTexture = ExtResource( 2 )
shader_param/imposterNormalTexture = ExtResource( 7 )

[node name="TestScene" type="Spatial"]

[node name="Impostor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.018, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="ViewportBaking" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
transparent_bg = true
handle_input_locally = false
msaa = 4
render_target_update_mode = 3

[node name="BakedContainer" type="Spatial" parent="ViewportBaking"]

[node name="tree_v2" parent="ViewportBaking/BakedContainer" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.416, 0 )

[node name="Camera" type="Camera" parent="ViewportBaking"]
visible = false
projection = 1
size = 1.5
script = ExtResource( 4 )
imageSquareSize = 4096
isFullSphere = false

[node name="container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="container"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Generate"

[node name="progress" type="ProgressBar" parent="container"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 38.0
max_value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="container"]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="container/HBoxContainer"]
margin_top = 5.0
margin_right = 78.0
margin_bottom = 19.0
text = "Camera size"

[node name="SpinBox" type="SpinBox" parent="container/HBoxContainer"]
margin_left = 82.0
margin_right = 156.0
margin_bottom = 24.0
step = 0.05
value = 1.0
allow_greater = true

[node name="Label2" type="Label" parent="container/HBoxContainer"]
margin_left = 160.0
margin_top = 5.0
margin_right = 257.0
margin_bottom = 19.0
text = "Use full sphere"

[node name="CheckboxFullSphere" type="CheckBox" parent="container/HBoxContainer"]
margin_left = 261.0
margin_right = 285.0
margin_bottom = 24.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.82278 )
visible = false
projection = 1
current = true
size = 1.5
script = ExtResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.811258, -0.584689, -2.24783e-07, 0.474083, 0.657791, 0.585284, -0.342209, -0.474816, 0.810829, -0.911007, 5.49376, -1.09719 )
editor_only = true
[connection signal="pressed" from="container/Button" to="ViewportBaking/Camera" method="_on_Button_pressed"]
[connection signal="value_changed" from="container/HBoxContainer/SpinBox" to="Camera" method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="container/HBoxContainer/SpinBox" to="ViewportBaking/Camera" method="_on_SpinBox_value_changed"]
[connection signal="toggled" from="container/HBoxContainer/CheckboxFullSphere" to="ViewportBaking/Camera" method="_on_CheckboxFullSphere_toggled"]
